--- a/examples/getting-started-codelab/starter-code/index.html
+++ b/examples/getting-started-codelab/starter-code/index.html
@@ -45,7 +45,8 @@
       <div id="blocklyDiv" style="height: 480px; width: 400px;"></div>
     </div>
   </main>
-
+  
+  <script src="https://unpkg.com/blockly"></script>
   <script src="scripts/music_maker.js"></script>
   <script src="scripts/main.js"></script>
 
